--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+* text eol=crlf
+
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
