--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 * text eol=crlf
+*.meta text eol=crlf
+*.asset text eol=crlf
+*.unity text eol=crlf
 
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
