--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,4 @@
-* text eol=crlf
-*.meta text eol=crlf
-*.asset text eol=crlf
-*.unity text eol=crlf
+* text eol=lf
 
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
